--- a/upc_ndc_conversion/upc_ndc.ipynb
+++ b/upc_ndc_conversion/upc_ndc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,47 +60,34 @@
     "    \"\"\"\n",
     "    upc_ndc_map = {}\n",
     "    for obj in data['results']:\n",
-    "        if 'openfda' in obj:\n",
-    "            if 'upc' in obj['openfda'] and 'product_ndc' in obj['openfda']:\n",
+    "        if 'product_ndc' in obj and 'openfda' in obj:\n",
+    "            if 'upc' in obj['openfda']:\n",
     "                for upc in obj['openfda']['upc']:\n",
-    "                    for ndc in obj['openfda']['product_ndc']:\n",
-    "                        upc_ndc_map[upc] = ndc\n",
+    "                    upc_ndc_map[upc] = obj['product_ndc']\n",
     "\n",
     "    return upc_ndc_map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0001-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0002-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0003-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0004-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0005-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0006-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0007-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0008-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0009-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0010-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0011-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0012-of-0013.json...\n",
-      "Loading C:\\Users\\andre\\Downloads\\upc_ndc\\drug-label-0013-of-0013.json...\n",
+      "Loading .\\drug-ndc-0001-of-0001.json...\n",
       "UPC to NDC Mapping:\n",
-      "UPC: 0300090020019 -> NDC: 67296-1821\n",
+      "UPC: 0305559045589 -> NDC: 0555-9045\n",
       "\n",
       "Mapping saved to upc_ndc_mapping.txt\n"
      ]
     }
    ],
    "source": [
-    "json_directory = \"C:\\\\Users\\\\andre\\\\Downloads\\\\upc_ndc\"  # Change this to your directory path\n",
-    "json_files = glob.glob(os.path.join(json_directory, \"drug-label-*.json\"))\n",
+    "json_directory = \".\"  # Change this to your directory path\n",
+    "json_files = glob.glob(os.path.join(json_directory, \"drug-ndc-*.json\"))\n",
     "\n",
     "# Initialize empty data dictionary\n",
     "data = {}\n",
@@ -138,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +134,7 @@
        "34683"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
